# ise-recorder

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  next.config.ts  package-lock.json  package.json  tag_images.sh
.github/workflows/: test-backend.yml  test-frontend.yml
app/: layout.tsx  page.tsx
app/lib/: AudioPreview.tsx  PreviewCard.tsx  SavedRecordingCard.tsx  VideoPreview.tsx  filesystem.ts  serverStorage.ts  types.ts  util.ts
backend/: .dockerignore  Dockerfile  pylintrc  pyproject.toml
backend/app/: requirements.txt  rerender.py  run_server.sh  server.py
backend/app/ise_record/: __init__.py  postprocess.py  reporting.py
backend/src/: rerender.py  run_server.sh  server.py
backend/src/ise_record/: logconfig.py  logging.py  postprocess.py  reporting.py  rerender.py  server.py
backend/tests/: test_postprocess.py  test_reporting.py  test_rerender.py  test_server.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vitest.config.mts  vitest.d.ts
frontend/__tests__/: command-download.ts  setup.ts
frontend/__tests__/components/: QuotaWarning.test.tsx  RecorderControls.test.tsx  SavedRecordingsSection.test.tsx  VideoPreview.test.tsx
frontend/__tests__/e2e/: home.test.tsx
frontend/__tests__/hooks/: useActiveRecording.test.tsx  useBrowserStorage.test.tsx  useLecture.test.tsx  useMediaDevices.test.tsx
frontend/__tests__/store/: store.test.tsx
frontend/__tests__/util/: browserStorage.test.ts  recording.test.tsx  serverStorage.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/env/: lib.ts  route.ts
frontend/app/lib/: AudioPreview.tsx  PreviewCard.tsx  Provider.tsx  SavedRecordingCard.tsx  ServerEnv.ts  ServerEnvProvider.tsx  SpectrumProvider.tsx  VideoPreview.tsx  filesystem.ts  serverStorage.ts
frontend/app/lib/components/: AudioPreview.tsx  GithubIcon.tsx  GithubLink.tsx  PreviewCard.tsx  PreviewSection.tsx  Provider.tsx  QuotaWarning.tsx  RecorderControls.tsx  SavedRecordingCard.tsx  SavedRecordingsSection.tsx  ServerEnvProvider.tsx  SpectrumProvider.tsx  VideoPreview.tsx
frontend/app/lib/hooks/: useActiveRecording.ts  useLecture.ts  (+7 more)
(+15 files in other folders)
