[project]
name = "ise-record-backend"
version = "1.0.8"
requires-python = ">=3.14"

dependencies = [
    "aiofiles~=25.1.0",
    "aiosmtplib~=5.1.0",
    "email-validator~=2.3.0",
    "fastapi~=0.135.1",
    "python-multipart~=0.0.22",
    "pydantic-settings~=2.13.1",
    "pydantic-extra-types~=2.11.0",
    "uvicorn~=0.41.0",
]

[dependency-groups]
test = [
    "httpx~=0.28.1",
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.1",
]

dev = [
    { include-group = "test" },
    "fastapi[standard]",
    "pylint~=4.0.5",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
