[project]
name = "ise-record"
version = "1.0.8"
requires-python = ">=3.14"

dependencies = [
    "aiofiles~=25.1.0",
    "aiosmtplib~=5.1.0",
    "email-validator~=2.3.0",
    "fastapi~=0.135.3",
    "pydantic-settings~=2.13.1",
    "pydantic-extra-types~=2.11.1",
    "python-multipart~=0.0.24",
    "uvicorn~=0.44.0",
]

[dependency-groups]
test = [
    "httpx~=0.28.1",
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.1",
]

dev = [
    { include-group = "test" },
    "fastapi[standard]",
    "pylint~=4.0.5",
]

[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
