[project]
name = "ise-record"
version = "1.0.8"
requires-python = "~=3.14"

dependencies = [
    "aiofiles~=25.1",
    "aiosmtplib~=5.1",
    "email-validator~=2.3",
    "fastapi~=0.136",
    "pydantic-settings~=2.13",
    "python-multipart~=0.0",
    "uvicorn~=0.44",
]

[dependency-groups]
test = [
    "httpx~=0.28",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-mock~=3.15",
]

dev = [
    { include-group = "test" },
    "fastapi[standard]",
    "pylint~=4.0",
]

[project.scripts]
ise-rerender = "ise_record.rerender:main"

[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
